--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 						<workerType>MICRO</workerType>
 						<properties>
 							<secure.key>${decryption.key}</secure.key>
+							<api.id>${api.id}</api.id>
 						</properties>
 					</cloudHubDeployment>
 					<classifier>mule-application</classifier>
