--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,8 @@
 						<properties>
 							<secure.key>${decryption.key}</secure.key>
 							<api.id>${api.id}</api.id>
+							<anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id> 
+							<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret>
 						</properties>
 					</cloudHubDeployment>
 					<classifier>mule-application</classifier>
