--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
 		<!-- <runtime.manager.mule.env>${mule.env}</runtime.manager.mule.env> <runtime.manager.mule.key>${mule.key}</runtime.manager.mule.key> -->
 
 
-		<anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id> 
-		<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret>
+		<!-- <anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id> 
+		<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret> -->
 	</properties>
 
 	<build>
@@ -56,9 +56,9 @@
 						<workerType>MICRO</workerType>
 						<properties>
 							<secure.key>${decryption.key}</secure.key>
-							<api.id>${api.id}</api.id>
-							<anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id> 
-							<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret>
+							<!-- <api.id>${api.id}</api.id>  -->
+							<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id> 
+							<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
 						</properties>
 					</cloudHubDeployment>
 					<classifier>mule-application</classifier>
