--- a/.github/workflows/reusableWorkflow.yml
+++ b/.github/workflows/reusableWorkflow.yml
@@ -69,6 +69,7 @@ jobs:
          -Ddecryption.key="$KEY" \
          -Denv=dev \
          -Dappname=algolia-app-dev-111 \
+         -Dapi.id="$API_ID" \
          -Danypoint.platform.client_id="$PLATFORM_CLIENT_ID" \
          -Danypoint.platform.client_secret="$PLATFORM_CLIENT_SECRET"
          
@@ -105,6 +106,7 @@ jobs:
          -Ddecryption.key="$KEY" \
          -Denv=qa \
          -Dappname=algolia-app-qa-111 \
+         -Dapi.id="$API_ID" \
          -Danypoint.platform.client_id="$PLATFORM_CLIENT_ID" \
          -Danypoint.platform.client_secret="$PLATFORM_CLIENT_SECRET"
   
@@ -141,6 +143,7 @@ jobs:
          -Ddecryption.key="$KEY" \
          -Denv=prod \
          -Dappname=algolia-app-prod-111 \
+         -Dapi.id="$API_ID" \
          -Danypoint.platform.client_id="$PLATFORM_CLIENT_ID" \
          -Danypoint.platform.client_secret="$PLATFORM_CLIENT_SECRET"
          
