--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,8 @@
 						<workerType>MICRO</workerType>
 						<properties>
 							<secure.key>${decryption.key}</secure.key>
-							<api.id>${api.id}</api.id>
+							<!-- <api.id>${api.id}</api.id> -->
+							<mule.env>${mule.env}</mule.env>
 							<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id> 
 							<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
 						</properties>
