--- a/.github/workflows/reusableWorkflow.yml
+++ b/.github/workflows/reusableWorkflow.yml
@@ -67,9 +67,9 @@ jobs:
          -Danypoint.username="$USERNAME" \
          -Danypoint.password="$PASSWORD" \
          -Ddecryption.key="$KEY" \
+         -Dmule.env=dev \
          -Denv=dev \
          -Dappname=algolia-app-dev-111 \
-         -Dapi.id="$API_ID" \
          -Danypoint.platform.client_id="$PLATFORM_CLIENT_ID" \
          -Danypoint.platform.client_secret="$PLATFORM_CLIENT_SECRET"
          
@@ -104,9 +104,9 @@ jobs:
          -Danypoint.username="$USERNAME" \
          -Danypoint.password="$PASSWORD" \
          -Ddecryption.key="$KEY" \
+         -Dmule.env=qa \
          -Denv=qa \
          -Dappname=algolia-app-qa-111 \
-         -Dapi.id="$API_ID" \
          -Danypoint.platform.client_id="$PLATFORM_CLIENT_ID" \
          -Danypoint.platform.client_secret="$PLATFORM_CLIENT_SECRET"
   
@@ -141,9 +141,9 @@ jobs:
          -Danypoint.username="$USERNAME" \
          -Danypoint.password="$PASSWORD" \
          -Ddecryption.key="$KEY" \
+         -Dmule.env=prod \
          -Denv=prod \
          -Dappname=algolia-app-prod-111 \
-         -Dapi.id="$API_ID" \
          -Danypoint.platform.client_id="$PLATFORM_CLIENT_ID" \
          -Danypoint.platform.client_secret="$PLATFORM_CLIENT_SECRET"
          
