--- a/src/main/resources/properties/dev-config.yaml
+++ b/src/main/resources/properties/dev-config.yaml
@@ -1,5 +1,5 @@
-#api:
-  #id: "19593584"
+api:
+  id: "19593584"
   
 platform:
   client_id: "![0FHei9kXx+sOncppCCnotURcr2pEXs5i9gsAP6geJXsXa+YhXG75YA==]"
