--- a/pom.xml
+++ b/pom.xml
@@ -42,27 +42,32 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-					<cloudHubDeployment>
-						<uri>https://anypoint.mulesoft.com</uri>
-						<muleVersion>4.4.0</muleVersion>
-						<!-- <username>${anypoint.username}</username> <password>${anypoint.password}</password> -->
-						<connectedAppClientId>${anypoint.username}</connectedAppClientId> 
-						<connectedAppClientSecret>${anypoint.password}</connectedAppClientSecret>
-						<connectedAppGrantType>client_credentials</connectedAppGrantType>
-						<applicationName>${appname}</applicationName>
-						<environment>${env}</environment>
-						<region>us-east-2</region>
-						<workers>1</workers>
-						<workerType>MICRO</workerType>
-						<properties>
-							<secure.key>${decryption.key}</secure.key>
-							<api.id>${api.id}</api.id>
-							<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id> 
-							<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
-						</properties>
-					</cloudHubDeployment>
-					<classifier>mule-application</classifier>
-				</configuration>
+                    			<classifier>mule-application</classifier>
+                    			<cloudhub2Deployment>
+                        		<uri>https://anypoint.mulesoft.com</uri>
+                        		<provider>MC</provider>
+                        		<environment>${env}</environment>
+                        		<target>Cloudhub-US-East-2</target>
+                        		<connectedAppClientId>${anypoint.username}</connectedAppClientId> 
+					<connectedAppClientSecret>${anypoint.password}</connectedAppClientSecret>
+					<connectedAppGrantType>client_credentials</connectedAppGrantType>
+                        		<applicationName>${appname}</applicationName>
+					<releaseChannel>None</releaseChannel>
+                        		<replicas>1</replicas>
+                        		<vCores>0.1</vCores>
+                        		<deploymentSettings>
+                            			<generateDefaultPublicUrl>true</generateDefaultPublicUrl>
+                        		</deploymentSettings>
+					<secureProperties>
+						<secure.key>${decryption.key}</secure.key>
+						<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id> 
+						<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
+					</secureProperties>
+					<properties>
+						<mule.env>${mule.env}</mule.env>							
+					</properties>
+                  		  </cloudhub2Deployment>
+                		</configuration>
 			</plugin>
 		</plugins>
 	</build>
