--- a/src/main/resources/properties/qa-config.yaml
+++ b/src/main/resources/properties/qa-config.yaml
@@ -1,10 +1,8 @@
-#api:
-  #id: "19593583"
+api:
+  id: "19593583"
 platform:
   client_id: "![S17BUxpDBvix6g64MP2ZGLUnCeA7unO56b/dTKbo6KX2MOvhMfBPWQ==]"
   client_secret: "![8mRhJqMvmgeAeUlZAbRuMYQy2siX6vo/VpAtEv7ZWEt1WbZBJ4PzIQ==]"
-  
-mule.env: "qa"
 
 salesforce:
   username: "![foKQrVSLEOjELQMJQyBlyhLg4YeStOrC7s3ShEPVyhc=]"
