--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
 
 		<!-- <runtime.manager.mule.env>${mule.env}</runtime.manager.mule.env> <runtime.manager.mule.key>${mule.key}</runtime.manager.mule.key> -->
 
-		<anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id>
-		<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret>
+		<!-- <anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id>
+		<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret>  -->
 		<munit.version>2.3.11</munit.version>
 	</properties>
 
