--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
 
 		<!-- <runtime.manager.mule.env>${mule.env}</runtime.manager.mule.env> <runtime.manager.mule.key>${mule.key}</runtime.manager.mule.key> -->
 
-		<!-- <anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id>
-		<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret>  -->
+		<anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id>
+		<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret>
 		<munit.version>2.3.11</munit.version>
 	</properties>
 
@@ -161,7 +161,22 @@
 			<url>https://repository.mulesoft.org/releases/</url>
 			<layout>default</layout>
 		</repository>
+		<!-- <repository>
+            <id>anypoint-exchange-v3</id>
+            <name>Private Exchange repository</name>
+            <url>https://maven.anypoint.mulesoft.com/api/v3/organizations/b5d4f67f-734f-43e9-97b5-1e94327cc433/maven</url>
+            <layout>default</layout>
+        </repository> -->
 	</repositories>
+	
+	<distributionManagement>
+        <repository>
+            <id>anypoint-exchange-v3</id>
+            <name>Corporate Repository</name>
+            <url>https://maven.anypoint.mulesoft.com/api/v3/organizations/b5d4f67f-734f-43e9-97b5-1e94327cc433/maven</url>
+            <layout>default</layout>
+        </repository>
+    </distributionManagement>
 
 	<pluginRepositories>
 		<pluginRepository>
