--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
 
 		<!-- <runtime.manager.mule.env>${mule.env}</runtime.manager.mule.env> <runtime.manager.mule.key>${mule.key}</runtime.manager.mule.key> -->
 
-		<anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id>
-		<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret>
+		<!-- <anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id>
+		<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret>  -->
 		<munit.version>2.3.11</munit.version>
 	</properties>
 
@@ -59,12 +59,12 @@
 							<generateDefaultPublicUrl>true</generateDefaultPublicUrl>
 						</deploymentSettings>
 						<secureProperties>
-							<secure.key>${decryption.key}</secure.key>
-							<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id>
-							<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
+							<secure.key>${decryption.key}</secure.key>							
 						</secureProperties>
 						<properties>
 							<mule.env>${mule.env}</mule.env>
+							<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id>
+							<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
 						</properties>
 					</cloudhub2Deployment>
 				</configuration>
