--- a/pom.xml
+++ b/pom.xml
@@ -65,8 +65,8 @@
 						</secureProperties>
 						<properties>
 							<mule.env>${mule.env}</mule.env>
-							<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id>
-							<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
+							<!-- <anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id>
+							<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret> -->
 						</properties>
 					</cloudhub2Deployment>
 				</configuration>
