--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -3,13 +3,13 @@ name: Deploy MuleSoft Application
 on:
   push:
     branches:
-      - demo
+      - ch2-test
   pull_request:
     branches:
-      - demo
+      - ch2-test
 
 
 jobs:
   call-workflow:
-    uses: GayathriNuthalapati/algolia-api/.github/workflows/reusableWorkflow.yml@demo
+    uses: GayathriNuthalapati/algolia-api/.github/workflows/reusableWorkflow.yml@ch2-test
     secrets: inherit
