--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-
-	<groupId>com.mycompany</groupId>
-	<artifactId>algolia</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-	<packaging>mule-application</packaging>
-
-	<name>algolia</name>
 
 	<groupId>c105df25-e89b-4946-9fdf-6a4c5107c350</groupId>
 	<artifactId>algolia-sys-api</artifactId>
@@ -19,17 +9,12 @@
 
 	<name>algolia-sys-api</name>
 
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<app.runtime>4.4.0-20220622</app.runtime>
-
-		<mule.maven.plugin.version>3.6.3</mule.maven.plugin.version>
-
 		<mule.maven.plugin.version>4.1.0</mule.maven.plugin.version>
-
 
 		<!-- <mule.env>dev</mule.env> -->
 
@@ -37,15 +22,9 @@
 
 		<!-- <runtime.manager.mule.env>${mule.env}</runtime.manager.mule.env> <runtime.manager.mule.key>${mule.key}</runtime.manager.mule.key> -->
 
-
-
-		<!-- <anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id> 
-		<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret> -->
-
 		<!-- <anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id>
 		<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret> -->
 		<munit.version>2.3.11</munit.version>
-
 	</properties>
 
 	<build>
@@ -61,29 +40,6 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-
-					<cloudHubDeployment>
-						<uri>https://anypoint.mulesoft.com</uri>
-						<muleVersion>4.4.0</muleVersion>
-						<!-- <username>${anypoint.username}</username> <password>${anypoint.password}</password> -->
-						<connectedAppClientId>${anypoint.username}</connectedAppClientId> 
-						<connectedAppClientSecret>${anypoint.password}</connectedAppClientSecret>
-						<connectedAppGrantType>client_credentials</connectedAppGrantType>
-						<applicationName>${appname}</applicationName>
-						<environment>${env}</environment>
-						<region>us-east-2</region>
-						<workers>1</workers>
-						<workerType>MICRO</workerType>
-						<properties>
-							<secure.key>${decryption.key}</secure.key>
-							<!-- <api.id>${api.id}</api.id> -->
-							<mule.env>${mule.env}</mule.env>
-							<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id> 
-							<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
-						</properties>
-					</cloudHubDeployment>
-					<classifier>mule-application</classifier>
-
 					<cloudhub2Deployment>
 						<uri>https://anypoint.mulesoft.com</uri>
 						<provider>MC</provider>
@@ -128,7 +84,6 @@
 							<format>html</format>
 						</formats>
 					</coverage>
-
 				</configuration>
 			</plugin>
 		</plugins>
@@ -147,17 +102,13 @@
 		<dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-http-connector</artifactId>
-
-			<version>1.7.1</version>
-
 			<version>1.9.3</version>
-
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-sockets-connector</artifactId>
-			<version>1.2.2</version>
+			<version>1.2.4</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<!-- <dependency>
@@ -170,19 +121,13 @@
 		<dependency>
 			<groupId>org.mule.modules</groupId>
 			<artifactId>mule-apikit-module</artifactId>
-			<version>1.6.1</version>
+			<version>1.10.4</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
-
-			<groupId>com.mulesoft.connectors</groupId>
-			<artifactId>mule-salesforce-connector</artifactId>
-			<version>10.19.0</version>
-
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-objectstore-connector</artifactId>
 			<version>1.2.2</version>
-
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
